Date	Added
12/8
        * Fixed crash with supernovices with 100% base exp [celest]
	* Updated the readme a little. [Mass Zero]

12/7
	* Added GUILDCACHE #define to int_guild.c for testing performance
	  effects [MouseJstr]
        * Skill Updates [celest]
          - Arrow Shower, Double Strafing, Charge Arrow, Throw Arrow, Sharp Shooting,
            Arrow Vulcan, and Musical Strike now take arrows when used
          - Level 6-10 Stone Curse will not consume a red gem now when it fails
          - Players should be able to use items when they're stoned but not yet
            completely petrified
          - Corrected Triple Blow to work with bows (they actually do ^^)
        * Added 'guildgetexp' script command [celest]
        * Added bLongAtkRate item effect [celest]
        * Implemented Confusion (50%) - still need more info on how monsters act
          when they're confused [celest]
        * Added 'Guardian Angel' code for supernovices [celest]

12/6
	* Fixed file props for new npcs [MouseJstr]
	* Fixed weddings.txt as per Fress_Boy [MouseJstr]
	* Added a case_sensitive to login [MouseJstr]
	* Fixed follow crashing server when gm dies [MouseJstr]
	* Fixed global message not working on txt [Wizputer]
	* fixed a server crash in mobinsite [MouseJstr]
	* fixed a server crash in party sharing exp [MouseJstr]
	* fixed a server crash in BS_FINDINGORE [MouseJstr]
        * Updated Chase Walk [celest]
        * Added 'checkoption1' and 'checkoption2' script functions - Refer to
          /npc/sample/npc_testchkoption.txt for similiar examples [celest]
        * Updated maximum level for Guild Skills [celest]

12/5
	* Fixed another crash sending updates to disconnected 
	  clients [MouseJstr]
	* Fixed the range_check again to stop it from crashing 
	  servers [MouseJstr]
	* removed stubbed out unfinished atcommands as per Cameri [MouseJstr]
	* Fixed nullpo's for gcc 2.95 [MouseJstr]