@@ -55,6 +55,9 @@ gm_account_filename_check_timer: 15
 // Log Filename. All operations received by the server are logged in this file.
 login_log_filename: log/login.log
 
+// To log the login server?
+log_login: 1
+
 // Name of the file of that logs the unknown packets (for debug or hack check)
 login_log_unknown_packets_filename: log/login_unknown_packets.log
 
